# physics-data-viewer

./: .coverage  .gitignore  AGENT_PROMPT_STEP_10.md  AGENT_PROMPT_STEP_5.5.md  AGENT_PROMPT_STEP_5.md  AGENT_PROMPT_STEP_6.md  AGENT_PROMPT_STEP_7.md  AGENT_PROMPT_STEP_8.5.md  AGENT_PROMPT_STEP_8.md  AGENT_PROMPT_STEP_9.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANUP_STEPS.md  CODE-REVIEW-RESULTS.md  CURRENT_STATE.md  DEVELOPMENT_PLAN.md  DEV_QUICKSTART.md  Development_plan.md  ELECTRON_UI_GUIDE.md  FEATURE_2_IMPLEMENTATION_STEPS.md  FEATURE_2_PROGRESS.md  IMPLEMENTATION_STEPS.md  LICENSE.md  LSP_DESIGN.md  OVERVIEW.md  PDV_RUNDOWN_AND_ISING_PLAN.md  PDV_V1_SCHEMA_DESIGN.md  PLAN.md  PLANNED_FEATURES.md  PROMPT_STEP_3.md  QUESTIONS.md  QUICKSTART.md  QUICK_START.md  README.md  SETTINGS_ENHANCEMENT.md  TEST-COVERAGE.md  UPCOMING_FEATURES.md  latest  mkdocs.yml  (+5 more)
.github/: copilot-instructions.md
0.0.10/: 404.html  index.html  sitemap.xml
0.0.11/: 404.html  index.html  sitemap.xml
0.0.12/: 404.html  index.html  sitemap.xml
0.0.7-alpha7/: 404.html  index.html  sitemap.xml
0.0.8-alpha8/: 404.html  index.html  sitemap.xml
0.0.9-alpha9/: 404.html  index.html  (+1 more)
pdv-python/: pyproject.toml
pdv-python/pdv/: __init__.py  checksum.py  comms.py  environment.py  errors.py  modules.py  namelist_utils.py  namespace.py  query_server.py  serialization.py  serializers.py  tree.py  tree_loader.py
pdv-python/pdv/handlers/: __init__.py  _helpers.py  gui.py  lifecycle.py  modules.py  namelist.py  namespace.py  note.py  project.py  script.py  tree.py
pdv-python/pdv_kernel/: __init__.py  checksum.py  comms.py  environment.py  errors.py  modules.py  namelist_utils.py  namespace.py  query_server.py  serialization.py  serializers.py  tree.py  tree_loader.py
pdv-python/pdv_kernel/handlers/: __init__.py  _helpers.py  gui.py  lifecycle.py  modules.py  namelist.py  namespace.py  note.py  project.py  script.py  tree.py
pdv-python/tests/: conftest.py  test_checksum.py  test_comms.py  test_early_module_setup.py  test_environment.py  test_handlers_lifecycle.py  test_handlers_modules.py  test_handlers_namespace.py  test_handlers_project.py  test_handlers_script.py  test_handlers_tree.py  test_integration_bootstrap.py  test_integration_dispatch.py  test_modules.py  test_namelist.py  test_namespace.py  test_note.py  test_pdvapp_api.py  test_purge_orphaned.py  test_serialization.py  test_serialization_errors.py  test_serializers.py  test_smart_copy.py  test_tree.py  test_tree_handlers.py
(+650 files in other folders)
