[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-data-viewer"
version = "0.1.0"
description = "Foundation for the physics data analysis platform"
readme = "README.md"
requires-python = ">=3.10, <3.15"
authors = [{ name = "Physics Data Viewer Team" }]
dependencies = ["pyyaml>=6.0.1", "fastapi>=0.110.0"]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
